--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
-  <title>Bikcraft - Bicicletas Elétricas</title>
-  <link rel="stylesheet" href="./src/css/style.css">
+  <title>Document</title>
 </head>
-
 <body>
-
+  
 </body>
-
 </html>
