--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description"
+    content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Bikcraft - Bicicletas Elétricas</title>
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
+
 <body>
-  
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <nav aria-label="primary nav">
+        <ul class="header-menu">
+          <li><a href="./bikes.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
+
 </html>
