begining of intro section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header-bg">
     <div class="header">
       <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
-      <nav aria-label="primary nav">
+      <nav aria-label="Primary nav">
         <ul class="header-menu">
           <li><a href="./bikes.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
@@ -23,6 +23,20 @@
       </nav>
     </div>
   </header>
+
+  <main class="intro-bg">
+    <div class="intro">
+      <div class="intro-content">
+        <h1>Bicicletas feitas sob medida <span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+          para você.
+          Explore o mundo na sua velocidade com a Bikcraft.
+        </p>
+        <a href="./bikes.html">Escolha a sua</a>
+      </div>
+      <img src="./src/img/fotos/introducao.jpg" alt="Black eletrical bike">
+    </div>
+  </main>
 </body>
 
 </html>
