--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </p>
         <a href="./bikes.html">Escolha a sua</a>
       </div>
-      <img src="./src/img/fotos/introducao.jpg" alt="Black eletrical bike">
+      <div>
+        <img src="./src/img/fotos/introducao.jpg" alt="Black eletrical bike">
+      </div>
     </div>
   </main>
 </body>
