update of style file and creation of the css utilities files, colors.css, text-colors.css, bg-colors.css, tipografy.css and components

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bikcraft - Bicicletas Elétricas</title>
   <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <header class="header-bg">
+  <header class="bg-black-100">
     <div class="header">
       <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
-        <ul class="header-menu">
+        <ul class="header-menu text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
           <li><a href="./contact.html">Contato</a></li>
@@ -24,15 +29,15 @@
     </div>
   </header>
 
-  <main class="intro-bg">
+  <main class="intro-bg text-white-100">
     <div class="intro">
       <div class="intro-content">
-        <h1>Bicicletas feitas sob medida <span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
-          para você.
-          Explore o mundo na sua velocidade com a Bikcraft.
-        </p>
-        <a href="./bikes.html">Escolha a sua</a>
+        <h1 class="text-lg">Bicicletas feitas sob medida <span
+            class="text-yellow-1">.</span></h1>
+        <p class="text-md text-gray-5">Bicicletas elétricas de alta precisão e
+          qualidade, feitas sob medida para você.
+          Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="button" href="./bikes.html">Escolha a sua</a>
       </div>
       <div>
         <img src="./src/img/fotos/introducao.jpg" alt="Black eletrical bike">
