font styles updated for css utilitarie, and add classes in HTML file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header">
       <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
-        <ul class="header-menu text-white-100">
+        <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
           <li><a href="./contact.html">Contato</a></li>
@@ -32,9 +32,9 @@
   <main class="intro-bg text-white-100">
     <div class="intro">
       <div class="intro-content">
-        <h1 class="text-lg">Bicicletas feitas sob medida <span
+        <h1 class="text-1xxl">Bicicletas feitas sob medida <span
             class="text-yellow-1">.</span></h1>
-        <p class="text-md text-gray-5">Bicicletas elétricas de alta precisão e
+        <p class="text-1m text-gray-5">Bicicletas elétricas de alta precisão e
           qualidade, feitas sob medida para você.
           Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="button" href="./bikes.html">Escolha a sua</a>
