new folder bikes added and file bikes-list.css, creation of bikes article section in index.html file, and styles of them

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
 </head>
 
@@ -32,8 +31,7 @@
   <main class="intro-bg text-white-100">
     <div class="intro">
       <div class="intro-content">
-        <h1 class="text-1xxl">Bicicletas feitas sob medida <span
-            class="text-yellow-1">.</span></h1>
+        <h1 class="text-1xxl">Bicicletas feitas sob medida <span class="text-yellow-1">.</span></h1>
         <p class="text-1m text-gray-5">Bicicletas elétricas de alta precisão e
           qualidade, feitas sob medida para você.
           Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -44,6 +42,32 @@
       </div>
     </div>
   </main>
+  <article class="bikes-models">
+    <h2 class="text-1xxl">escolha a sua <span class="text-yellow-1">.</span></h2>
+    <ul class="bikes-models-list">
+      <li>
+        <a href="./bikes/magic.html">
+          <img src="./src/img/bicicletas/magic-home.jpg" alt="Bike black">
+          <h3 class="text-1xl">Magic Might</h3>
+          <span class="text-2m text-gray-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bikes/nebula.html">
+          <img src="./src/img/bicicletas/nimbus-home.jpg" alt="Bike black">
+          <h3 class="text-1xl">Nimbus Stark</h3>
+          <span class="text-2m text-gray-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bikes/nimbus.html">
+          <img src="./src/img/bicicletas/nebula-home.jpg" alt="Bike white">
+          <h3 class="text-1xl">Nebula Cosmic</h3>
+          <span class="text-2m text-gray-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
