creation and implementation of container component

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="bg-black-100">
-    <div class="header">
+    <div class="header container">
       <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
@@ -29,7 +29,7 @@
   </header>
 
   <main class="intro-bg text-white-100">
-    <div class="intro">
+    <div class="intro container">
       <div class="intro-content">
         <h1 class="text-1xxl">Bicicletas feitas sob medida <span class="text-yellow-1">.</span></h1>
         <p class="text-1m text-gray-5">Bicicletas elétricas de alta precisão e
@@ -43,7 +43,7 @@
     </div>
   </main>
   <article class="bikes-models">
-    <h2 class="text-1xxl">escolha a sua <span class="text-yellow-1">.</span></h2>
+    <h2 class="text-1xxl container">escolha a sua <span class="text-yellow-1">.</span></h2>
     <ul class="bikes-models-list">
       <li>
         <a href="./bikes/magic.html">
