creation of the technology section on index.html, and added new file technology.css at home folder with his setups, correction of the tipografy.css file

--- a/index.html
+++ b/index.html
@@ -68,6 +68,41 @@
       </li>
     </ul>
   </article>
+
+  <article class="technology-bg">
+    <div class="technology container">
+      <div class="technology-content">
+        <span class="text-2lb text-gray-5">Tecnologia Avançada</span>
+        <h2 class="text-1xxl text-white-100">você escolhe as suas cores e componentes <span
+            class="text-yellow-1">.</span></h2>
+        <p class="text-2l text-gray-5">Cada Bikecraft é única e possui a sua identidade. As medidas serão exatas para o
+          seu corpo e altura,
+          garantindo maior conforto e ergonomia na sua pedalada. Você também pode personalixar completamente as suas
+          cores.</p>
+        <a class="general-link" href="./bikes.html">Escolha um modelo</a>
+        <div class="technology-advantages">
+          <div>
+            <img src="./src/img/icones/eletrica.svg" alt="">
+            <h3 class="text-1m text-white-100">Motor Elétrico</h3>
+            <p class="text-2s text-gray-5">Toda Bikecraft é equipada com um motor elétrico que possui duraçõa de até
+              120h.
+              A bateria é recarregada com
+              a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./src/img/icones/rastreador.svg" alt="">
+            <h3 class="text-1m text-white-100">Rastreador</h3>
+            <p class="text-2s text-gray-5">Sabemos o quão preciosa é a sua Bikecraft, por isso adicionamos rastreadores
+              e sistemas anti-furto para
+              garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="technology-img">
+        <img src="./src/img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
+  </article>
 </body>
 
 </html>
