--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
       </div>
     </div>
   </article>
+
+  <section class="partners" aria-label="Nossos Parceiros">
+    <h2 class="text-1xxl container">nossos parceiros<span class="text-yellow-1">.</span></h2>
+    <ul>
+      <li><img src="./src/img/parceiros/caravan.svg" alt="caravan"></li>
+      <li><img src="./src/img/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="./src/img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./src/img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./src/img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./src/img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./src/img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./src/img/parceiros/surfbot.svg" alt="surfbot"></li>
+    </ul>
+  </section>
+
+
 </body>
 
 </html>
