creation of the insurance article on index.html, and added new folder insurance on folder css with file insurance.css

--- a/index.html
+++ b/index.html
@@ -134,6 +134,37 @@
     </div>
   </section>
 
+  <article class="insurance-bg">
+    <div class="insurance container">
+      <h2 class="text-1xxl text-white-100">Seguros<span class="text-yellow-1">.</span></h2>
+      <div class="insurance-item">
+        <h3 class="text-1xl text-gray-6">PRATA</h3>
+        <span class="text-1xl text-white-100">R$ 199<span class="text-1xs text-gray-6">mensal</span></span>
+        <ul class="text-2m text-white-100">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a href="./budget.html" class="button secondary">Inscreva-se</a>
+      </div>
+
+      <div class="insurance-item">
+        <h3 class="text-1xl text-yellow-1">OURO</h3>
+        <span class="text-1xl text-white-100">R$ 299<span class="text-1xs text-gray-6">mensal</span></span>
+        <ul class="text-2m text-white-100">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura Nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a href="./budget.html" class="button">Inscreva-se</a>
+      </div>
+    </div>
+  </article>
+
 </body>
 
 </html>
