creation of the footer on file index.html and added new file footer.css on folder global,I did make corrections on the padding property on file components.css

--- a/index.html
+++ b/index.html
@@ -165,6 +165,45 @@
     </div>
   </article>
 
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contact">
+        <h3 class="text-2lb text-white-100">Contato</h3>
+        <ul class=" text-2m text-gray-5">
+          <li><a href="tel:+5575999999999">+55 75 9 9999-9999</a></li>
+          <li><a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+          <li>Rua da Passagem, 43, 22290-030, Botafogo.</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-social">
+          <a href="./">
+            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informations">
+        <h3 class="text-2lb text-white-100">Informações</h3>
+        <nav>
+          <ul class="text-1m text-gray-5">
+            <li><a href="./bikes.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+            <li><a href="./terms.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy text-2m text-gray-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+
+  </footer>
+
 </body>
 
 </html>
