creation of the page bikes.html and your styles on folder bikes in the file bikes.css, importing bikes.css to styles.css and I made de quite bit correction in global.css

--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body id="terms">
   <header class="bg-black-100">
     <div class="header container">
       <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
