--- a/bikes.html
+++ b/bikes.html
@@ -1,13 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description"
+    content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Bicicletas | Bikcraf</title>
+  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
+    rel="stylesheet">
 </head>
 
-<body>
+<body id="bikes">
+  <header class="bg-black-100">
+    <div class="header container">
+      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <nav aria-label="Primary nav">
+        <ul class="header-menu text-1m text-white-100">
+          <li><a href="./bikes.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div class="title-bg">
+      <div class="title container">
+        <p class="text-2lb text-gray-5">Escolha a melhor para você</p>
+        <h1 class="text-1xxl text-white-100">nossas bicicletas<span class="text-yellow-1">.</span></h1>
+      </div>
+    </div>
+    </div>
+
+
+    <div class="bikes container">
+      <div class="bikes-img">
+        <img src="./src/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <span class="text-2m text-white-100">R$ 4999</span>
+      </div>
+      <div class="bikes-content">
+        <h2 class="text-1xl">Nimbus Stark</h2>
+        <p class="text-2s text-gray-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
+          equipada com os melhores
+          acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1m text-gray-8">
+          <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+          <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+          <li><img src="./src/img/icones/velocidade.svg" alt="">60Km/h</li>
+          <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+        </ul>
+        <a href="./bikes/nebula.html" class="button arrow-foward">Mais Sobre</a>
+      </div>
+    </div>
+
+
+    <div class="bikes-bg">
+      <div class="bikes container">
+        <div class="bikes-img">
+          <img src="./src/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <span class="text-2m text-white-100">R$ 2999</span>
+        </div>
+        <div class="bikes-content">
+          <h2 class="text-1xl text-white-100">Magic Might</h2>
+          <p class="text-2s text-gray-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
+            com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="font-1m text-gray-5">
+            <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+            <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+            <li><img src="./src/img/icones/velocidade.svg" alt="">50Km/h</li>
+            <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+          </ul>
+          <a href="./bikes/magic.html" class="button arrow-foward">Mais Sobre</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="bikes container">
+      <div class="bikes-img">
+        <img src="./src/img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+        <span class="text-2m text-white-100">R$ 3999</span>
+      </div>
+      <div class="bikes-content">
+        <h2 class="text-1xl">Nebula Cosmic</h2>
+        <p class="text-2s text-gray-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
+          equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1m text-gray-8">
+          <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
+          <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
+          <li><img src="./src/img/icones/velocidade.svg" alt="">40Km/h</li>
+          <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+        </ul>
+        <a href="./bikes/cosmic.html" class="button arrow-foward">Mais Sobre</a>
+      </div>
+    </div>
+
+
+  </main>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contact">
+        <h3 class="text-2lb text-white-100">Contato</h3>
+        <ul class=" text-2m text-gray-5">
+          <li><a href="tel:+5575999999999">+55 75 9 9999-9999</a></li>
+          <li><a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+          <li>Rua da Passagem, 43, 22290-030, Botafogo.</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-social">
+          <a href="./">
+            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informations">
+        <h3 class="text-2lb text-white-100">Informações</h3>
+        <nav>
+          <ul class="text-1m text-gray-5">
+            <li><a href="./bikes.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+            <li><a href="./terms.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy text-2m text-gray-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+
+  </footer>
 
 </body>
 
