--- a/insurance.html
+++ b/insurance.html
@@ -1,13 +1,179 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="Termos e Condições contratuais.">
+  <title>Seguros | Bikcraft</title>
+  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
+    rel="stylesheet">
 </head>
 
-<body>
+<body id="insurance">
+  <header class="bg-black-100">
+    <div class="header container">
+      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <nav aria-label="Primary nav">
+        <ul class="header-menu text-1m text-white-100">
+          <li><a href="./bikes.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="insurance-bg">
+    <article class="advantages-bg">
+      <div class="advantages container">
+        <h2 class="text-1xxl text-white-100">Vantagens<span class="text-yellow-1">.</span></h2>
+        <ul>
+          <li>
+            <img src="./src/img/icones/eletrica.svg" alt="">
+            <h3 class="text-1l text-white-100">Reparo Elétrico</h3>
+            <p class="text-2s text-gray-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que
+              falhas são raras, mas estamos
+              aqui para caso ocorra.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/carbono.svg" alt="">
+            <h3 class="text-1l text-white-100">Carbono</h3>
+            <p class="text-2s text-gray-5">Nossos quadro são feitos para durar para sempre. Mas caso algo ocorra,
+              ficamos felizes em reparar.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/sustentavel.svg" alt="">
+            <h3 class="text-1l text-white-100">Sustentável</h3>
+            <p class="text-2s text-gray-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é
+              reciclada e reutilizada em outro projeto.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/rastreador.svg" alt="">
+            <h3 class="text-1l text-white-100">Rastreador</h3>
+            <p class="text-2s text-gray-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança
+              para efetuarmos a recuperação.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/seguro.svg" alt="">
+            <h3 class="text-1l text-white-100">Segurança</h3>
+            <p class="text-2s text-gray-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro
+              não será perdido em casos de roubo.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/velocidade.svg" alt="">
+            <h3 class="text-1l text-white-100">Rapidez</h3>
+            <p class="text-2s text-gray-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela pra
+              ser reparada em uma das filiais.</p>
+          </li>
+        </ul>
+      </div>
+    </article>
+    <div class="title-bg">
+      <div class="title container">
+        <p class="text-2lb text-gray-5">Escolha o seguro</p>
+        <h1 class="text-1xxl text-white-100">você seguro<span class="text-yellow-1">.</span></h1>
+      </div>
+    </div>
+    <div class="insurance container">
+      <div class="insurance-item">
+        <h3 class="text-1xl text-gray-6">PRATA</h3>
+        <span class="text-1xl text-white-100">R$ 199<span class="text-1xs text-gray-6">mensal</span></span>
+        <ul class="text-2m text-white-100">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a href="./budget.html" class="button secondary">Inscreva-se</a>
+      </div>
+      <div class="insurance-item">
+        <h3 class="text-1xl text-yellow-1">OURO</h3>
+        <span class="text-1xl text-white-100">R$ 299<span class="text-1xs text-gray-6">mensal</span></span>
+        <ul class="text-2m text-white-100">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura Nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a href="./budget.html" class="button">Inscreva-se</a>
+      </div>
+  </main>
+  <article class="questions container">
+    <h2 class="text-1xxl">perguntas frequentes<span class="text-yellow-1">.</span></h2>
+    <dl>
+      <div>
+        <dt class="text-1mb">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="text-2s">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista
+          também aceitamos PIX
+          e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="text-1mb">Como posso entrar em contato?</dt>
+        <dd class="text-2s">Entre em contato conosco através dos nossos contatos fixados neste website.</dd>
+      </div>
+      <div>
+        <dt class="text-1mb">Vocês possuem algum desconto?</dt>
+        <dd class="text-2s">Para pagamentos realizaros através do PIX ou Boleto à vista nossos clientes possuem um
+          desconto de 8% do valor do produto.</dd>
+      </div>
+      <div>
+        <dt class="text-1mb">Qual a garantia que possuo?</dt>
+        <dd class="text-2s">Garantias contra defeitos de fabricação em quadro, suspensão, câmbio e aros.</dd>
+      </div>
+      <div>
+        <dt class="text-1mb">Posso parcelar no boleto?</dt>
+        <dd class="text-2s">Infelizmente não, ainda não utilizamos este meio como forma de recebimento, mas fique
+          tranquilo temos diversas outras formas para te ajudar na aquisição da sua Bikcraft.</dd>
+      </div>
+      <div>
+        <dt class="text-1mb">Quantas trocas posso realizar anualmente?</dt>
+        <dd class="text-2s">É possível realizar até 2 trocas por ano.</dd>
+      </div>
+    </dl>
+  </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contact">
+        <h3 class="text-2lb text-white-100">Contato</h3>
+        <ul class=" text-2m text-gray-5">
+          <li><a href="tel:+5575999999999">+55 75 9 9999-9999</a></li>
+          <li><a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+          <li>Rua da Passagem, 43, 22290-030, Botafogo.</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-social">
+          <a href="./">
+            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informations">
+        <h3 class="text-2lb text-white-100">Informações</h3>
+        <nav>
+          <ul class="text-1m text-gray-5">
+            <li><a href="./bikes.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+            <li><a href="./terms.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy text-2m text-gray-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 
 </body>
 
