creation of the page bikes.html and your styles bike.css on the folder bike,importing this files to main file style.css and some little corrections in bikes-list.css

--- a/bikes.html
+++ b/bikes.html
@@ -55,7 +55,7 @@
           <li><img src="./src/img/icones/velocidade.svg" alt="">60Km/h</li>
           <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
         </ul>
-        <a href="./bikes/nebula.html" class="button arrow-foward">Mais Sobre</a>
+        <a href="./bikes/nimbus.html" class="button arrow-foward">Mais Sobre</a>
       </div>
     </div>
 
