--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         </a>
       </li>
       <li>
-        <a href="./bikes/nebula.html">
+        <a href="./bikes/nimbus.html">
           <img src="./src/img/bicicletas/nimbus-home.jpg" alt="Bike black">
           <h3 class="text-1xl">Nimbus Stark</h3>
           <span class="text-2m text-gray-8">R$ 4999</span>
         </a>
       </li>
       <li>
-        <a href="./bikes/nimbus.html">
+        <a href="./bikes/cosmic.html">
           <img src="./src/img/bicicletas/nebula-home.jpg" alt="Bike white">
           <h3 class="text-1xl">Nebula Cosmic</h3>
           <span class="text-2m text-gray-8">R$ 3999</span>
