--- a/bikes/cosmic.html
+++ b/bikes/cosmic.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
-  <title>Nimbus Stark | Bikcraft</title>
+  <title>Nebula Cosmic | Bikcraft</title>
   <link rel="stylesheet" href="../src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,23 +31,24 @@
   <main class="title-bg">
     <div>
       <div class="title container">
-        <p class="text-2xl text-gray-5">R$ 4999</p>
-        <h1 class="text-1xxl text-white-100">Nimbus Stark<span class="text-yellow-1">.</span></h1>
+        <p class="text-2xl text-gray-5">R$ 3999</p>
+        <h1 class="text-1xxl text-white-100">Nebula Cosmic<span class="text-yellow-1">.</span></h1>
       </div>
     </div>
     <div class="bike container">
       <div class="bike-img">
-        <img src="../src/img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../src/img/bicicleta/nimbus2.jpg" alt="">
         <img src="../src/img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../src/img/bicicleta/nimbus2.jpg" alt="">
+        <img src="../src/img/bicicleta/nimbus1.jpg" alt="">
       </div>
       <div class="bike-content">
-        <p class="text-2l text-gray-5"> A nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
+        <p class="text-2l text-gray-5"> A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
+          equipada
           com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bike-buy">
           <a class="button" href="../budget.html">Comprar Agora</a>
           <span class="text-1xs text-gray-6"><img src="../src/img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
-          <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" alt="">18 em estoque</span>
+          <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" alt="">2 em estoque</span>
         </div>
 
         <h2 class="text-1xs text-white-100">Informações</h2>
@@ -59,7 +60,7 @@
           </li>
           <li>
             <img src="../src/img/icones/velocidade.svg" alt="">
-            <h3 class="text-1m text-white-100">60 km/h</h3>
+            <h3 class="text-1m text-white-100">40 km/h</h3>
             <p class="font-2xs text-gray-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
@@ -89,29 +90,29 @@
     <h2 class="text-1xxl ">escolha a sua <span class="text-yellow-1">.</span></h2>
     <ul class="bikes-models-list">
       <li>
-        <a href="./magic.html">
-          <img src="../src/img/bicicletas/magic.jpg" alt="Bike black">
-          <h3 class="text-1xl">Magic Might</h3>
-          <span class="text-2m text-gray-8">R$ 2499</span>
+        <a href="./nimbus.html">
+          <img src="../src/img/bicicletas/nimbus.jpg" alt="Bike black">
+          <h3 class="text-1xl">Nimbus Stark</h3>
+          <span class="text-2m text-gray-8">R$ 4999</span>
         </a>
       </li>
       <li>
-        <a href="./cosmic.html">
-          <img src="../src/img/bicicletas/nebula.jpg" alt="Bike white">
-          <h3 class="text-1xl">Nebula Cosmic</h3>
-          <span class="text-2m text-gray-8">R$ 3999</span>
+        <a href="./magic.html">
+          <img src="../src/img/bicicletas/magic.jpg" alt="Bike white">
+          <h3 class="text-1xl">Magic Might</h3>
+          <span class="text-2m text-gray-8">R$ 2999</span>
         </a>
       </li>
     </ul>
   </article>
-
   <article class="insurance-bikes-bg">
     <div class="insurance-bikes container">
       <div class="insurance-bikes-img">
         <img src="../src/img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
       </div>
       <div class="insurance-bikes-content">
-        <h2 class="text-1xxl text-white-100">Pedale mais tranquilo com o nosso <span class="text-yellow-1">seguro.</span>
+        <h2 class="text-1xxl text-white-100">Pedale mais tranquilo com o nosso <span
+            class="text-yellow-1">seguro.</span>
         </h2>
         <p class="text-2xl text-gray-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos
           benefícios.</p>
@@ -119,7 +120,6 @@
       </div>
     </div>
   </article>
-
   <footer class="footer-bg">
     <div class="footer container">
       <img src="../src/img/bikcraft.svg" alt="Bikcraft">
