--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,170 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contato</title>
+  <meta name="description" content="Contato">
+  <title>Contato | Bikcraft</title>
+  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
+    rel="stylesheet">
 </head>
 
-<body>
+<body id="contact">
+  <header class="bg-black-100">
+    <div class="header container">
+      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <nav aria-label="Primary nav">
+        <ul class="header-menu text-1m text-white-100">
+          <li><a href="./bikes.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div class="title-bg">
+      <div class="title container">
+        <p class="text-2lb text-gray-5">Respostas em até 24h</p>
+        <h1 class="text-1xxl text-white-100">nosso contato<span class="text-yellow-1">.</span></h1>
+      </div>
+    </div>
+
+    <div class="contact container">
+      <section class="contact-data" aria-label="Adress">
+        <h2 class="text-1m text-white-100">Loja Online</h2>
+        <div class="contact-adress text-2s text-gray-4">
+          <p>Rua da Passagem, 43, 22290-030, Botafogo.</p>
+          <p>Rio de Janeiro</p>
+          <p>Brasil</p>
+        </div>
+        <address class="contact-ways text-2s text-gray-4">
+          <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+          <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
+          <a href="tel:+5575999999999">+55 75 9 9999-9999</a>
+        </address>
+        <div class="contact-social">
+          <a href="./">
+            <img src="./src/img/social-media/instagram-p.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/facebook-p.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/youtube-p.svg" alt="Youtube">
+          </a>
+        </div>
+      </section>
+      <section class="contact-formulary" aria-label="formulary">
+        <form class="form" action="./contact.html">
+          <div>
+            <label for="name">Nome</label>
+            <input type="text" id="name" name="name" placeholder="Seu nome">
+          </div>
+          <div>
+            <label for="cellphone">Telefone</label>
+            <input type="text" id="cellphone" name="cellphone" placeholder="(75) 99999-9999">
+          </div>
+          <div class="col2">
+            <label for="mail">Email</label>
+            <input type="email" id="mail" name="mail" placeholder="seuemail@email.com">
+          </div>
+          <div class="col2">
+            <label for="message">Mensagem</label>
+            <textarea rows="5" id="message" name="message" placeholder="O que você precisa?"></textarea>
+          </div>
+          <button class="button col2">Enviar mensagem</button>
+        </form>
+      </section>
+    </div>
+  </main>
+
+  <article class="stores container">
+    <h2 class="text-1xxl">lojas locais<span class="text-yellow-1">.</span></h2>
+
+    <div class="item-store">
+      <img src="./src/img/lojas/rj.jpg"
+        alt="Mapa marcando o endereço em Rua da Passagem, 43, 22290-030, Botafogo, Rio de Janeiro - RJ.">
+      <div class="stores-content">
+        <h3 class="text-1xl">Rio de Janeiro</h3>
+        <div class="data-store text-2s text-gray-8">
+          <p>Rua da Passagem, 43, 22290-030, Botafogo.</p>
+          <p>Rio de Janeiro - RJ.</p>
+        </div>
+        <div class="data-store text-2s text-gray-8">
+          <a href="mailto:assistenciarj@bikcraft.com">assistenciarj@bikcraft.com</a>
+          <a href="tel:+5575999999999">+55 21 9 9999-9999</a>
+        </div>
+        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+      </div>
+
+    </div>
+
+
+
+    <div class="item-store">
+      <img src="./src/img/lojas/sp.jpg"
+        alt="Mapa marcando o endereço em Rua da Passagem, 43, 22290-030, Botafogo, Rio de Janeiro - RJ.">
+      <div class="stores-content">
+        <h3 class="text-1xl">São Paulo</h3>
+        <div class="data-store text-2s text-gray-8">
+          <p>Rua da Passagem, 43, 22290-030, Botafogo.</p>
+          <p>São Paulo - SP.</p>
+        </div>
+        <div class="data-store text-2s text-gray-8">
+          <a href="mailto:assistenciasp@bikcraft.com">assistenciasp@bikcraft.com</a>
+          <a href="tel:+5575999999999">+55 11 9 9999-9999</a>
+        </div>
+        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+      </div>
+
+    </div>
+
+  </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contact">
+        <h3 class="text-2lb text-white-100">Contato</h3>
+        <ul class=" text-2m text-gray-5">
+          <li><a href="tel:+5575999999999">+55 75 9 9999-9999</a></li>
+          <li><a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+          <li>Rua da Passagem, 43, 22290-030, Botafogo.</li>
+          <li>Rio de Janeiro - RJ</li>
+        </ul>
+        <div class="footer-social">
+          <a href="./">
+            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informations">
+        <h3 class="text-2lb text-white-100">Informações</h3>
+        <nav>
+          <ul class="text-1m text-gray-5">
+            <li><a href="./bikes.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+            <li><a href="./terms.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy text-2m text-gray-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+
+  </footer>
 
 </body>
 
