--- a/budget.html
+++ b/budget.html
@@ -35,41 +35,56 @@
         <h1 class="text-1xxl text-white-100">solicite um orçamento<span class="text-yellow-1">.</span></h1>
       </div>
     </div>
-    <form class="budget container" action="./">
+    <form class="budget container" action="#">
       <div class="budget-product">
         <h2 class="text-1xs text-gray-5">Bikcraft ou Seguro?</h2>
-
         <input type="radio" name="type" value="bikcraft" id="bikcraft">
         <label for="bikcraft">Bikcraft</label>
-
         <input type="radio" name="type" value="insurance" id="insurance">
         <label for="insurance">Seguro</label>
-
         <div class="budget-content" id="budget-bikcraft">
           <h2 class="text-1xs text-gray-5">Escolha a sua (BIKCRAFT)</h2>
-
           <input type="radio" name="product" value="nimbus" id="nimbus">
           <label for="nimbus">Nimbus Stark<span>R$ 4999</span></label>
-
+          <div class="budget-details">
+            <ul class="text-1xs text-gray-8">
+              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" alt="">60 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./src/img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+          </div>
           <input type="radio" name="product" value="magic" id="magic">
-          <label for="magic">Magic Might <span>R$ 2999</span></label>
-
+          <label for="magic">Magic Might<span>R$ 2999</span></label>
+          <div class="budget-details">
+            <ul class="text-1xs text-gray-8">
+              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./src/img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+          </div>
           <input type="radio" name="product" value="cosmic" id="cosmic">
-          <label for="cosmic">Nebula Cosmic <span>R$ 3999</span></label>
+          <label for="cosmic">Nebula Cosmic<span>R$ 3999</span></label>
+          <div class="budget-details">
+            <ul class="text-1xs text-gray-8">
+              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./src/img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+          </div>
         </div>
-
-
         <div class="budget-content" id="budget-insurance">
           <h2 class="text-1xs text-gray-5">Escolha o plano</h2>
-
           <input type="radio" name="product" value="silver" id="silver">
           <label for="silver">Prata<span>R$ 199</span></label>
-
           <input type="radio" name="product" value="gold" id="gold">
           <label for="gold">Ouro<span>R$ 299</span></label>
         </div>
-
-
       </div>
       <div class="budget-data form">
         <h2 class="text-1xs text-gray-9 col2">dados pessoais</h2>
@@ -102,7 +117,7 @@
           <input type="text" id="number" name="number">
         </div>
         <div>
-          <label for="public-area">Logradouro</label>
+          <label for="public-area">Complemento</label>
           <input type="text" id="public-area" name="public-area">
         </div>
         <div>
