Ended HTML & CSS

--- a/bikes.html
+++ b/bikes.html
@@ -7,18 +7,14 @@
   <meta name="description"
     content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bicicletas | Bikcraf</title>
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="bikes">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -41,7 +37,7 @@
 
     <div class="bikes container">
       <div class="bikes-img">
-        <img src="./src/img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <img src="./src/img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="text-2m text-white-100">R$ 4999</span>
       </div>
       <div class="bikes-content">
@@ -50,10 +46,10 @@
           equipada com os melhores
           acessórios, o que garante maior velocidade.</p>
         <ul class="font-1m text-gray-8">
-          <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-          <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-          <li><img src="./src/img/icones/velocidade.svg" alt="">60Km/h</li>
-          <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+          <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+          <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+          <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">60Km/h</li>
+          <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
         </ul>
         <a href="./bikes/nimbus.html" class="button arrow-foward">Mais Sobre</a>
       </div>
@@ -63,7 +59,7 @@
     <div class="bikes-bg">
       <div class="bikes container">
         <div class="bikes-img">
-          <img src="./src/img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="./src/img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="text-2m text-white-100">R$ 2999</span>
         </div>
         <div class="bikes-content">
@@ -71,10 +67,10 @@
           <p class="text-2s text-gray-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
             com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1m text-gray-5">
-            <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-            <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-            <li><img src="./src/img/icones/velocidade.svg" alt="">50Km/h</li>
-            <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+            <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+            <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+            <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">50Km/h</li>
+            <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
           </ul>
           <a href="./bikes/magic.html" class="button arrow-foward">Mais Sobre</a>
         </div>
@@ -83,7 +79,7 @@
 
     <div class="bikes container">
       <div class="bikes-img">
-        <img src="./src/img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+        <img src="./src/img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta branca">
         <span class="text-2m text-white-100">R$ 3999</span>
       </div>
       <div class="bikes-content">
@@ -91,10 +87,10 @@
         <p class="text-2s text-gray-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
           equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1m text-gray-8">
-          <li><img src="./src/img/icones/eletrica.svg" alt=""> Motor Elétrico</li>
-          <li><img src="./src/img/icones/carbono.svg" alt=""> Fibra de Carbono</li>
-          <li><img src="./src/img/icones/velocidade.svg" alt="">40Km/h</li>
-          <li><img src="./src/img/icones/rastreador.svg" alt=""> Rastreador</li>
+          <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt=""> Motor Elétrico</li>
+          <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt=""> Fibra de Carbono</li>
+          <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">40Km/h</li>
+          <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt=""> Rastreador</li>
         </ul>
         <a href="./bikes/cosmic.html" class="button arrow-foward">Mais Sobre</a>
       </div>
@@ -105,7 +101,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -116,13 +112,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
