--- a/terms.html
+++ b/terms.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
   <title>Termos e Condições | Bikcraft</title>
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="terms">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -62,7 +58,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -73,13 +69,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
