--- a/bikes/magic.html
+++ b/bikes/magic.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
   <title>Magic Might | Bikcraft</title>
+  <link rel="preload" href="../src/css/style.css" as="style">
   <link rel="stylesheet" href="../src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="bike">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="../"><img src="../src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="../"><img src="../src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="../bikes.html">Bicicletas</a></li>
@@ -37,38 +33,40 @@
     </div>
     <div class="bike container">
       <div class="bike-img">
-        <img src="../src/img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../src/img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../src/img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../src/img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="">
+        <img src="../src/img/bicicleta/nimbus1.jpg" width="1120" height="880" alt="">
+        <img src="../src/img/bicicleta/nimbus3.jpg" width="1120" height="880" alt="">
       </div>
       <div class="bike-content">
         <p class="text-2l text-gray-5"> A magic might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
           com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bike-buy">
           <a class="button" href="../budget.html">Comprar Agora</a>
-          <span class="text-1xs text-gray-6"><img src="../src/img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
-          <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" alt="">8 em estoque</span>
+          <span class="text-1xs text-gray-6"><img src="../src/img/icones/entrega.svg" width="16" height="16" alt="">
+            entrega em 5 dias</span>
+          <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" width="16" height="16" alt="">8
+            em estoque</span>
         </div>
 
         <h2 class="text-1xs text-white-100">Informações</h2>
         <ul class="bike-info">
           <li>
-            <img src="../src/img/icones/eletrica.svg" alt="">
+            <img src="../src/img/icones/eletrica.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">Motor Elétrico</h3>
             <p class="font-2xs text-gray-5">Permite você viajar distâncias inimagináveis com a sua bike.</p>
           </li>
           <li>
-            <img src="../src/img/icones/velocidade.svg" alt="">
+            <img src="../src/img/icones/velocidade.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">50 km/h</h3>
             <p class="font-2xs text-gray-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
-            <img src="../src/img/icones/rastreador.svg" alt="">
+            <img src="../src/img/icones/rastreador.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">Rastreador</h3>
             <p class="font-2xs text-gray-5">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
           </li>
           <li>
-            <img src="../src/img/icones/carbono.svg" alt="">
+            <img src="../src/img/icones/carbono.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">Fibra de Carbono</h3>
             <p class="font-2xs text-gray-5">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
           </li>
@@ -90,14 +88,14 @@
     <ul class="bikes-models-list">
       <li>
         <a href="./nimbus.html">
-          <img src="../src/img/bicicletas/nimbus.jpg" alt="Bike black">
+          <img src="../src/img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bike black">
           <h3 class="text-1xl">Nimbus Stark</h3>
           <span class="text-2m text-gray-8">R$ 4999</span>
         </a>
       </li>
       <li>
         <a href="./cosmic.html">
-          <img src="../src/img/bicicletas/nebula.jpg" alt="Bike white">
+          <img src="../src/img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bike white">
           <h3 class="text-1xl">Nebula Cosmic</h3>
           <span class="text-2m text-gray-8">R$ 3999</span>
         </a>
@@ -107,7 +105,7 @@
   <article class="insurance-bikes-bg">
     <div class="insurance-bikes container">
       <div class="insurance-bikes-img">
-        <img src="../src/img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+        <img src="../src/img/fotos/seguros.jpg" width="1360" height="1512" alt="Pessoa parada em cima de uma bicicleta">
       </div>
       <div class="insurance-bikes-content">
         <h2 class="text-1xxl text-white-100">Pedale mais tranquilo com o nosso <span
@@ -121,7 +119,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="../src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -132,13 +130,13 @@
         </ul>
         <div class="footer-social">
           <a href="../">
-            <img src="../src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="../src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="../">
-            <img src="../src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="../src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="../">
-            <img src="../src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="../src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
