--- a/bikes/nimbus.html
+++ b/bikes/nimbus.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
   <title>Nimbus Stark | Bikcraft</title>
+  <link rel="preload" href="../src/css/style.css" as="style">
   <link rel="stylesheet" href="../src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="bike">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="../"><img src="../src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="../"><img src="../src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="../bikes.html">Bicicletas</a></li>
@@ -90,14 +86,14 @@
     <ul class="bikes-models-list">
       <li>
         <a href="./magic.html">
-          <img src="../src/img/bicicletas/magic.jpg" alt="Bike black">
+          <img src="../src/img/bicicletas/magic.jpg" width="1120" height="680" alt="Bike black">
           <h3 class="text-1xl">Magic Might</h3>
           <span class="text-2m text-gray-8">R$ 2499</span>
         </a>
       </li>
       <li>
         <a href="./cosmic.html">
-          <img src="../src/img/bicicletas/nebula.jpg" alt="Bike white">
+          <img src="../src/img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bike white">
           <h3 class="text-1xl">Nebula Cosmic</h3>
           <span class="text-2m text-gray-8">R$ 3999</span>
         </a>
@@ -108,10 +104,11 @@
   <article class="insurance-bikes-bg">
     <div class="insurance-bikes container">
       <div class="insurance-bikes-img">
-        <img src="../src/img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+        <img src="../src/img/fotos/seguros.jpg" width="1360" height="1512" alt="Pessoa parada em cima de uma bicicleta">
       </div>
       <div class="insurance-bikes-content">
-        <h2 class="text-1xxl text-white-100">Pedale mais tranquilo com o nosso <span class="text-yellow-1">seguro.</span>
+        <h2 class="text-1xxl text-white-100">Pedale mais tranquilo com o nosso <span
+            class="text-yellow-1">seguro.</span>
         </h2>
         <p class="text-2xl text-gray-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos
           benefícios.</p>
@@ -122,7 +119,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="../src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -133,13 +130,13 @@
         </ul>
         <div class="footer-social">
           <a href="../">
-            <img src="../src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="../src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="../">
-            <img src="../src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="../src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="../">
-            <img src="../src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="../src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
