--- a/budget.html
+++ b/budget.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
   <title>Orçamento | Bikcraft</title>
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="budget">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -48,34 +44,34 @@
           <label for="nimbus">Nimbus Stark<span>R$ 4999</span></label>
           <div class="budget-details">
             <ul class="text-1xs text-gray-8">
-              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
-              <li><img src="./src/img/icones/velocidade.svg" alt="">60 km/h</li>
-              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">60 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./src/img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+            <img src="./src/img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta Preta">
           </div>
           <input type="radio" name="product" value="magic" id="magic">
           <label for="magic">Magic Might<span>R$ 2999</span></label>
           <div class="budget-details">
             <ul class="text-1xs text-gray-8">
-              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
-              <li><img src="./src/img/icones/velocidade.svg" alt="">50 km/h</li>
-              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./src/img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+            <img src="./src/img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta Preta">
           </div>
           <input type="radio" name="product" value="cosmic" id="cosmic">
           <label for="cosmic">Nebula Cosmic<span>R$ 3999</span></label>
           <div class="budget-details">
             <ul class="text-1xs text-gray-8">
-              <li><img src="./src/img/icones/eletrica.svg" alt="">Motor Elétrico</li>
-              <li><img src="./src/img/icones/carbono.svg" alt="">Fibra Carbono</li>
-              <li><img src="./src/img/icones/velocidade.svg" alt="">40 km/h</li>
-              <li><img src="./src/img/icones/rastreador.svg" alt="">Rastreador</li>
+              <li><img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./src/img/icones/carbono.svg" width="32" height="32" alt="">Fibra Carbono</li>
+              <li><img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">40 km/h</li>
+              <li><img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./src/img/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+            <img src="./src/img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta Branca">
           </div>
         </div>
         <div class="budget-content" id="budget-insurance">
@@ -139,7 +135,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -150,13 +146,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
