--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Contato">
   <title>Contato | Bikcraft</title>
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="contact">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -51,13 +47,13 @@
         </address>
         <div class="contact-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram-p.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram-p.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook-p.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook-p.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube-p.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube-p.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </section>
@@ -89,7 +85,7 @@
     <h2 class="text-1xxl">lojas locais<span class="text-yellow-1">.</span></h2>
 
     <div class="item-store">
-      <img src="./src/img/lojas/rj.jpg"
+      <img src="./src/img/lojas/rj.jpg" width="1120" height="520"
         alt="Mapa marcando o endereço em Rua da Passagem, 43, 22290-030, Botafogo, Rio de Janeiro - RJ.">
       <div class="stores-content">
         <h3 class="text-1xl">Rio de Janeiro</h3>
@@ -101,7 +97,8 @@
           <a href="mailto:assistenciarj@bikcraft.com">assistenciarj@bikcraft.com</a>
           <a href="tel:+5575999999999">+55 21 9 9999-9999</a>
         </div>
-        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de
+          seg à dom</p>
       </div>
 
     </div>
@@ -109,7 +106,7 @@
 
 
     <div class="item-store">
-      <img src="./src/img/lojas/sp.jpg"
+      <img src="./src/img/lojas/sp.jpg" width="1120" height="520"
         alt="Mapa marcando o endereço em Rua da Passagem, 43, 22290-030, Botafogo, Rio de Janeiro - RJ.">
       <div class="stores-content">
         <h3 class="text-1xl">São Paulo</h3>
@@ -121,7 +118,8 @@
           <a href="mailto:assistenciasp@bikcraft.com">assistenciasp@bikcraft.com</a>
           <a href="tel:+5575999999999">+55 11 9 9999-9999</a>
         </div>
-        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="stores-time text-1s"><img src="./src/img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de
+          seg à dom</p>
       </div>
 
     </div>
@@ -129,7 +127,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -140,13 +138,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
