--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
   <meta name="description"
     content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bikcraft - Bicicletas Elétricas</title>
+
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body>
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -38,9 +35,10 @@
           Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="button" href="./bikes.html">Escolha a sua</a>
       </div>
-      <div>
-        <img src="./src/img/fotos/introducao.jpg" alt="Black eletrical bike">
-      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./src/img/bicicletas/nimbus.jpg">
+        <img src="./src/img/fotos/introducao.jpg" width="1280" height="1600" alt="Black eletrical bike">
+      </picture>
     </div>
   </main>
   <article class="bikes-models">
@@ -48,21 +46,21 @@
     <ul class="bikes-models-list">
       <li>
         <a href="./bikes/magic.html">
-          <img src="./src/img/bicicletas/magic-home.jpg" alt="Bike black">
+          <img src="./src/img/bicicletas/magic-home.jpg" width="920" height="1040" alt="Bike black">
           <h3 class="text-1xl">Magic Might</h3>
           <span class="text-2m text-gray-8">R$ 2499</span>
         </a>
       </li>
       <li>
         <a href="./bikes/nimbus.html">
-          <img src="./src/img/bicicletas/nimbus-home.jpg" alt="Bike black">
+          <img src="./src/img/bicicletas/nimbus-home.jpg" width="920" height="1040" alt="Bike black">
           <h3 class="text-1xl">Nimbus Stark</h3>
           <span class="text-2m text-gray-8">R$ 4999</span>
         </a>
       </li>
       <li>
         <a href="./bikes/cosmic.html">
-          <img src="./src/img/bicicletas/nebula-home.jpg" alt="Bike white">
+          <img src="./src/img/bicicletas/nebula-home.jpg" width="920" height="1040" alt="Bike white">
           <h3 class="text-1xl">Nebula Cosmic</h3>
           <span class="text-2m text-gray-8">R$ 3999</span>
         </a>
@@ -83,7 +81,7 @@
         <a class="general-link" href="./bikes.html">Escolha um modelo</a>
         <div class="technology-advantages">
           <div>
-            <img src="./src/img/icones/eletrica.svg" alt="">
+            <img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">Motor Elétrico</h3>
             <p class="text-2s text-gray-5">Toda Bikecraft é equipada com um motor elétrico que possui duraçõa de até
               120h.
@@ -91,7 +89,7 @@
               a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <img src="./src/img/icones/rastreador.svg" alt="">
+            <img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">
             <h3 class="text-1m text-white-100">Rastreador</h3>
             <p class="text-2s text-gray-5">Sabemos o quão preciosa é a sua Bikecraft, por isso adicionamos rastreadores
               e sistemas anti-furto para
@@ -100,7 +98,7 @@
         </div>
       </div>
       <div class="technology-img">
-        <img src="./src/img/fotos/tecnologia.jpg" alt="">
+        <img src="./src/img/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
       </div>
     </div>
   </article>
@@ -108,20 +106,21 @@
   <section class="partners" aria-label="Nossos Parceiros">
     <h2 class="text-1xxl container">nossos parceiros<span class="text-yellow-1">.</span></h2>
     <ul>
-      <li><img src="./src/img/parceiros/caravan.svg" alt="caravan"></li>
-      <li><img src="./src/img/parceiros/ranek.svg" alt="ranek"></li>
-      <li><img src="./src/img/parceiros/handel.svg" alt="handel"></li>
-      <li><img src="./src/img/parceiros/dogs.svg" alt="dogs"></li>
-      <li><img src="./src/img/parceiros/lescone.svg" alt="lescone"></li>
-      <li><img src="./src/img/parceiros/flexblog.svg" alt="flexblog"></li>
-      <li><img src="./src/img/parceiros/wildbeast.svg" alt="wildbeast"></li>
-      <li><img src="./src/img/parceiros/surfbot.svg" alt="surfbot"></li>
+      <li><img src="./src/img/parceiros/caravan.svg" width="140" height="38" alt="caravan"></li>
+      <li><img src="./src/img/parceiros/ranek.svg" width="149" height="36" alt="ranek"></li>
+      <li><img src="./src/img/parceiros/handel.svg" width="139" height="50" alt="handel"></li>
+      <li><img src="./src/img/parceiros/dogs.svg" width="152" height="39" alt="dogs"></li>
+      <li><img src="./src/img/parceiros/lescone.svg" width="208" height="41" alt="lescone"></li>
+      <li><img src="./src/img/parceiros/flexblog.svg" width="165" height="38" alt="flexblog"></li>
+      <li><img src="./src/img/parceiros/wildbeast.svg" width="196" height="34" alt="wildbeast"></li>
+      <li><img src="./src/img/parceiros/surfbot.svg" width="200" height="49" alt="surfbot"></li>
     </ul>
   </section>
 
   <section class="testimony" aria-label="Depoimento">
     <div>
-      <img src="./src/img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+      <img src="./src/img/fotos/depoimento.jpg" width="1560" height="1360"
+        alt="Pessoa pedalando uma bicicleta Bikcraft">
     </div>
     <div class="testimony-content">
       <blockquote class="text-1xl text-yellow-5">
@@ -167,7 +166,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -178,13 +177,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
