--- a/insurance.html
+++ b/insurance.html
@@ -6,18 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e Condições contratuais.">
   <title>Seguros | Bikcraft</title>
+  <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:ital,wght@1,900&display=swap"
-    rel="stylesheet">
 </head>
 
 <body id="insurance">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -28,50 +24,7 @@
     </div>
   </header>
   <main class="insurance-bg">
-    <article class="advantages-bg">
-      <div class="advantages container">
-        <h2 class="text-1xxl text-white-100">Vantagens<span class="text-yellow-1">.</span></h2>
-        <ul>
-          <li>
-            <img src="./src/img/icones/eletrica.svg" alt="">
-            <h3 class="text-1l text-white-100">Reparo Elétrico</h3>
-            <p class="text-2s text-gray-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que
-              falhas são raras, mas estamos
-              aqui para caso ocorra.</p>
-          </li>
-          <li>
-            <img src="./src/img/icones/carbono.svg" alt="">
-            <h3 class="text-1l text-white-100">Carbono</h3>
-            <p class="text-2s text-gray-5">Nossos quadro são feitos para durar para sempre. Mas caso algo ocorra,
-              ficamos felizes em reparar.</p>
-          </li>
-          <li>
-            <img src="./src/img/icones/sustentavel.svg" alt="">
-            <h3 class="text-1l text-white-100">Sustentável</h3>
-            <p class="text-2s text-gray-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é
-              reciclada e reutilizada em outro projeto.</p>
-          </li>
-          <li>
-            <img src="./src/img/icones/rastreador.svg" alt="">
-            <h3 class="text-1l text-white-100">Rastreador</h3>
-            <p class="text-2s text-gray-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança
-              para efetuarmos a recuperação.</p>
-          </li>
-          <li>
-            <img src="./src/img/icones/seguro.svg" alt="">
-            <h3 class="text-1l text-white-100">Segurança</h3>
-            <p class="text-2s text-gray-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro
-              não será perdido em casos de roubo.</p>
-          </li>
-          <li>
-            <img src="./src/img/icones/velocidade.svg" alt="">
-            <h3 class="text-1l text-white-100">Rapidez</h3>
-            <p class="text-2s text-gray-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela pra
-              ser reparada em uma das filiais.</p>
-          </li>
-        </ul>
-      </div>
-    </article>
+
     <div class="title-bg">
       <div class="title container">
         <p class="text-2lb text-gray-5">Escolha o seguro</p>
@@ -103,6 +56,52 @@
         </ul>
         <a href="./budget.html" class="button">Inscreva-se</a>
       </div>
+
+    </div>
+    <article class="advantages-bg">
+      <div class="advantages container">
+        <h2 class="text-1xxl text-white-100">Vantagens<span class="text-yellow-1">.</span></h2>
+        <ul>
+          <li>
+            <img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Reparo Elétrico</h3>
+            <p class="text-2s text-gray-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que
+              falhas são raras, mas estamos
+              aqui para caso ocorra.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/carbono.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Carbono</h3>
+            <p class="text-2s text-gray-5">Nossos quadro são feitos para durar para sempre. Mas caso algo ocorra,
+              ficamos felizes em reparar.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/sustentavel.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Sustentável</h3>
+            <p class="text-2s text-gray-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é
+              reciclada e reutilizada em outro projeto.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Rastreador</h3>
+            <p class="text-2s text-gray-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança
+              para efetuarmos a recuperação.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/seguro.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Segurança</h3>
+            <p class="text-2s text-gray-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro
+              não será perdido em casos de roubo.</p>
+          </li>
+          <li>
+            <img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">
+            <h3 class="text-1l text-white-100">Rapidez</h3>
+            <p class="text-2s text-gray-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela pra
+              ser reparada em uma das filiais.</p>
+          </li>
+        </ul>
+      </div>
+    </article>
   </main>
   <article class="questions container">
     <h2 class="text-1xxl">perguntas frequentes<span class="text-yellow-1">.</span></h2>
@@ -139,7 +138,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
         <ul class=" text-2m text-gray-5">
@@ -150,13 +149,13 @@
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
