Adding scripts and quite little corrections

--- a/budget.html
+++ b/budget.html
@@ -31,7 +31,7 @@
         <h1 class="text-1xxl text-white-100">solicite um orçamento<span class="text-yellow-1">.</span></h1>
       </div>
     </div>
-    <form class="budget container" action="#">
+    <form class="budget container" action="./budget.html">
       <div class="budget-product">
         <h2 class="text-1xs text-gray-5">Bikcraft ou Seguro?</h2>
         <input type="radio" name="type" value="bikcraft" id="bikcraft">
@@ -172,6 +172,7 @@
 
   </footer>
 
+  <script src="./src/scripts/script.js"></script>
 </body>
 
 </html>
