--- a/insurance.html
+++ b/insurance.html
@@ -2,18 +2,18 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e Condições contratuais.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Termos e Condições contratuais." />
   <title>Seguros | Bikcraft</title>
-  <link rel="preload" href="./src/css/style.css" as="style">
-  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="preload" href="./src/css/style.css" as="style" />
+  <link rel="stylesheet" href="./src/css/style.css" />
 </head>
 
 <body id="insurance">
   <header class="bg-black-100">
     <div class="header container">
-      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"></a>
+      <a href="./"><img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft" /></a>
       <nav aria-label="Primary nav">
         <ul class="header-menu text-1m text-white-100">
           <li><a href="./bikes.html">Bicicletas</a></li>
@@ -24,11 +24,12 @@
     </div>
   </header>
   <main class="insurance-bg">
-
     <div class="title-bg">
       <div class="title container">
         <p class="text-2lb text-gray-5">Escolha o seguro</p>
-        <h1 class="text-1xxl text-white-100">você seguro<span class="text-yellow-1">.</span></h1>
+        <h1 class="text-1xxl text-white-100">
+          você seguro<span class="text-yellow-1">.</span>
+        </h1>
       </div>
     </div>
     <div class="insurance container">
@@ -41,7 +42,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a href="./budget.html" class="button secondary">Inscreva-se</a>
+        <a href="./budget.html?type=insurance&product=silver" class="button secondary">Inscreva-se</a>
       </div>
       <div class="insurance-item">
         <h3 class="text-1xl text-yellow-1">OURO</h3>
@@ -54,108 +55,163 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a href="./budget.html" class="button">Inscreva-se</a>
+        <a href="./budget.html?type=insurance&product=gold" class="button">Inscreva-se</a>
       </div>
-
     </div>
     <article class="advantages-bg">
       <div class="advantages container">
-        <h2 class="text-1xxl text-white-100">Vantagens<span class="text-yellow-1">.</span></h2>
+        <h2 class="text-1xxl text-white-100">
+          Vantagens<span class="text-yellow-1">.</span>
+        </h2>
         <ul>
           <li>
-            <img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/eletrica.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Reparo Elétrico</h3>
-            <p class="text-2s text-gray-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que
-              falhas são raras, mas estamos
-              aqui para caso ocorra.</p>
+            <p class="text-2s text-gray-5">
+              Garantimos o reparo completo do seu motor em caso de falhas.
+              Sabemos que falhas são raras, mas estamos aqui para caso ocorra.
+            </p>
           </li>
           <li>
-            <img src="./src/img/icones/carbono.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/carbono.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Carbono</h3>
-            <p class="text-2s text-gray-5">Nossos quadro são feitos para durar para sempre. Mas caso algo ocorra,
-              ficamos felizes em reparar.</p>
+            <p class="text-2s text-gray-5">
+              Nossos quadro são feitos para durar para sempre. Mas caso algo
+              ocorra, ficamos felizes em reparar.
+            </p>
           </li>
           <li>
-            <img src="./src/img/icones/sustentavel.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/sustentavel.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Sustentável</h3>
-            <p class="text-2s text-gray-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é
-              reciclada e reutilizada em outro projeto.</p>
+            <p class="text-2s text-gray-5">
+              Trabalhamos com a filosofia de desperdício zero. Qualquer parte
+              defeituosa é reciclada e reutilizada em outro projeto.
+            </p>
           </li>
           <li>
-            <img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/rastreador.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Rastreador</h3>
-            <p class="text-2s text-gray-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança
-              para efetuarmos a recuperação.</p>
+            <p class="text-2s text-gray-5">
+              Utilizamos o GPS da sua Bikcraft em conjunto com especialistas
+              em segurança para efetuarmos a recuperação.
+            </p>
           </li>
           <li>
-            <img src="./src/img/icones/seguro.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/seguro.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Segurança</h3>
-            <p class="text-2s text-gray-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro
-              não será perdido em casos de roubo.</p>
+            <p class="text-2s text-gray-5">
+              Com o seguro Bikcraft você pode ficar tranquilo em saber que o
+              seu dinheiro não será perdido em casos de roubo.
+            </p>
           </li>
           <li>
-            <img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="">
+            <img src="./src/img/icones/velocidade.svg" width="32" height="32" alt="" />
             <h3 class="text-1l text-white-100">Rapidez</h3>
-            <p class="text-2s text-gray-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela pra
-              ser reparada em uma das filiais.</p>
+            <p class="text-2s text-gray-5">
+              A sua Bikcraft ficará pronta para uso no mesmo dia, caso você
+              traga ela pra ser reparada em uma das filiais.
+            </p>
           </li>
         </ul>
       </div>
     </article>
   </main>
   <article class="questions container">
-    <h2 class="text-1xxl">perguntas frequentes<span class="text-yellow-1">.</span></h2>
+    <h2 class="text-1xxl">
+      perguntas frequentes<span class="text-yellow-1">.</span>
+    </h2>
     <dl>
       <div>
-        <dt class="text-1mb">Qual forma de pagamento vocês aceitam?</dt>
-        <dd class="text-2s">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista
-          também aceitamos PIX
-          e Boleto através do PagSeguro.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-1" aria-expanded="true">
+            Qual forma de pagamento vocês aceitam?
+          </button>
+        </dt>
+        <dd id="question-1" class="text-2s active">
+          Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
+          pagamentos à vista também aceitamos PIX e Boleto através do
+          PagSeguro.
+        </dd>
       </div>
       <div>
-        <dt class="text-1mb">Como posso entrar em contato?</dt>
-        <dd class="text-2s">Entre em contato conosco através dos nossos contatos fixados neste website.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-2" aria-expanded="false">
+            Como posso entrar em contato?
+          </button>
+        </dt>
+        <dd id="question-2" class="text-2s">
+          Entre em contato conosco através dos nossos contatos fixados neste
+          website.
+        </dd>
       </div>
       <div>
-        <dt class="text-1mb">Vocês possuem algum desconto?</dt>
-        <dd class="text-2s">Para pagamentos realizaros através do PIX ou Boleto à vista nossos clientes possuem um
-          desconto de 8% do valor do produto.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-3" aria-expanded="false">
+            Vocês possuem algum desconto?
+          </button>
+        </dt>
+        <dd id="question-3" class="text-2s">
+          Para pagamentos realizaros através do PIX ou Boleto à vista nossos
+          clientes possuem um desconto de 8% do valor do produto.
+        </dd>
       </div>
       <div>
-        <dt class="text-1mb">Qual a garantia que possuo?</dt>
-        <dd class="text-2s">Garantias contra defeitos de fabricação em quadro, suspensão, câmbio e aros.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-4" aria-expanded="false">
+            Qual a garantia que possuo?
+          </button>
+        </dt>
+        <dd id="question-4" class="text-2s">
+          Garantias contra defeitos de fabricação em quadro, suspensão, câmbio
+          e aros.
+        </dd>
       </div>
       <div>
-        <dt class="text-1mb">Posso parcelar no boleto?</dt>
-        <dd class="text-2s">Infelizmente não, ainda não utilizamos este meio como forma de recebimento, mas fique
-          tranquilo temos diversas outras formas para te ajudar na aquisição da sua Bikcraft.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-5" aria-expanded="false">
+            Posso parcelar no boleto?
+          </button>
+        </dt>
+        <dd id="question-5" class="text-2s">
+          Infelizmente não, ainda não utilizamos este meio como forma de
+          recebimento, mas fique tranquilo temos diversas outras formas para
+          te ajudar na aquisição da sua Bikcraft.
+        </dd>
       </div>
       <div>
-        <dt class="text-1mb">Quantas trocas posso realizar anualmente?</dt>
-        <dd class="text-2s">É possível realizar até 2 trocas por ano.</dd>
+        <dt>
+          <button class="text-1mb" aria-controls="question-6" aria-expanded="false">
+            Quantas trocas posso realizar anualmente?
+          </button>
+        </dt>
+        <dd id="question-6" class="text-2s">
+          É possível realizar até 2 trocas por ano.
+        </dd>
       </div>
     </dl>
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <img src="./src/img/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
       <div class="footer-contact">
         <h3 class="text-2lb text-white-100">Contato</h3>
-        <ul class=" text-2m text-gray-5">
+        <ul class="text-2m text-gray-5">
           <li><a href="tel:+5575999999999">+55 75 9 9999-9999</a></li>
-          <li><a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a></li>
+          <li>
+            <a href="mailto:contato@bikecraft.com">contato@bikecraft.com</a>
+          </li>
           <li>Rua da Passagem, 43, 22290-030, Botafogo.</li>
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-social">
           <a href="./">
-            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram">
+            <img src="./src/img/social-media/instagram.svg" width="32" height="32" alt="Instagram" />
           </a>
           <a href="./">
-            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook">
+            <img src="./src/img/social-media/facebook.svg" width="32" height="32" alt="Facebook" />
           </a>
           <a href="./">
-            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube">
+            <img src="./src/img/social-media/youtube.svg" width="32" height="32" alt="Youtube" />
           </a>
         </div>
       </div>
@@ -170,10 +226,13 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy text-2m text-gray-6">Bikcraft © Alguns direitos reservados.</p>
+      <p class="footer-copy text-2m text-gray-6">
+        Bikcraft © Alguns direitos reservados.
+      </p>
     </div>
   </footer>
 
+  <script src="./src/scripts/script.js"></script>
 </body>
 
 </html>
