--- a/bikes/magic.html
+++ b/bikes/magic.html
@@ -33,15 +33,15 @@
     </div>
     <div class="bike container">
       <div class="bike-img">
-        <img src="../src/img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="">
-        <img src="../src/img/bicicleta/nimbus1.jpg" width="1120" height="880" alt="">
-        <img src="../src/img/bicicleta/nimbus3.jpg" width="1120" height="880" alt="">
+        <img src="../src/img/bicicleta/nimbus2.jpg" width="1120" height="880" alt="Bicicleta 01">
+        <img src="../src/img/bicicleta/nimbus1.jpg" width="1120" height="880" alt="Bicicleta 02">
+        <img src="../src/img/bicicleta/nimbus3.jpg" width="1120" height="880" alt="Bicicleta 03">
       </div>
       <div class="bike-content">
         <p class="text-2l text-gray-5"> A magic might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
           com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bike-buy">
-          <a class="button" href="../budget.html">Comprar Agora</a>
+          <a class="button" href="../budget.html?type=bikcraft&product=magic">Comprar Agora</a>
           <span class="text-1xs text-gray-6"><img src="../src/img/icones/entrega.svg" width="16" height="16" alt="">
             entrega em 5 dias</span>
           <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" width="16" height="16" alt="">8
@@ -156,6 +156,7 @@
 
   </footer>
 
+  <script src="../src/scripts/script.js"></script>
 </body>
 
 </html>
