--- a/bikes/nimbus.html
+++ b/bikes/nimbus.html
@@ -33,15 +33,15 @@
     </div>
     <div class="bike container">
       <div class="bike-img">
-        <img src="../src/img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../src/img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../src/img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../src/img/bicicleta/nimbus1.jpg" alt="Bicicleta 01">
+        <img src="../src/img/bicicleta/nimbus2.jpg" alt="Bicicleta 02">
+        <img src="../src/img/bicicleta/nimbus3.jpg" alt="Bicicleta 03">
       </div>
       <div class="bike-content">
         <p class="text-2l text-gray-5"> A nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada
           com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bike-buy">
-          <a class="button" href="../budget.html">Comprar Agora</a>
+          <a class="button" href="../budget.html?type=bikcraft&product=nimbus">Comprar Agora</a>
           <span class="text-1xs text-gray-6"><img src="../src/img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
           <span class="text-1xs text-gray-6"><img src="../src/img/icones/estoque.svg" alt="">18 em estoque</span>
         </div>
@@ -156,6 +156,7 @@
 
   </footer>
 
+  <script src="../src/scripts/script.js"></script>
 </body>
 
 </html>
