Adding scripts and quite little corrections

--- a/insurance.html
+++ b/insurance.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="insurance container">
-      <div class="insurance-item">
+      <div class="insurance-item fadeInLeft" data-anime="200">
         <h3 class="text-1xl text-gray-6">PRATA</h3>
         <span class="text-1xl text-white-100">R$ 199<span class="text-1xs text-gray-6">mensal</span></span>
         <ul class="text-2m text-white-100">
@@ -44,7 +44,7 @@
         </ul>
         <a href="./budget.html?type=insurance&product=silver" class="button secondary">Inscreva-se</a>
       </div>
-      <div class="insurance-item">
+      <div class="insurance-item fadeInRight" data-anime="400">
         <h3 class="text-1xl text-yellow-1">OURO</h3>
         <span class="text-1xl text-white-100">R$ 299<span class="text-1xs text-gray-6">mensal</span></span>
         <ul class="text-2m text-white-100">
@@ -235,6 +235,7 @@
     </div>
   </footer>
 
+  <script src="./src/plugins/simple-anime.js"></script>
   <script src="./src/scripts/script.js"></script>
 </body>
 
