--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
   <main class="intro-bg text-white-100">
     <div class="intro container">
       <div class="intro-content">
-        <h1 class="text-1xxl">Bicicletas feitas sob medida <span class="text-yellow-1">.</span></h1>
-        <p class="text-1m text-gray-5">Bicicletas elétricas de alta precisão e
+        <h1 class="text-1xxl fadeInDown" data-anime="200">Bicicletas feitas sob medida <span
+            class="text-yellow-1">.</span></h1>
+        <p class="text-1m text-gray-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e
           qualidade, feitas sob medida para você.
           Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="button" href="./bikes.html">Escolha a sua</a>
+        <a class="button fadeInDown" href="./bikes.html" data-anime="600">Escolha a sua</a>
       </div>
-      <picture>
+      <picture data-anime="800" class="fadeInDown">
         <source media="(max-width: 800px)" srcset="./src/img/bicicletas/nimbus.jpg">
         <img src="./src/img/fotos/introducao.jpg" width="1280" height="1600" alt="Black eletrical bike">
       </picture>
@@ -202,6 +203,7 @@
     </div>
 
   </footer>
+  <script src="./src/plugins/simple-anime.js"></script>
   <script src="./src/scripts/script.js"></script>
 </body>
 
