Adding scripts to check if Javascript is active or not in the browser

--- a/bikes.html
+++ b/bikes.html
@@ -9,6 +9,7 @@
   <title>Bicicletas | Bikcraf</title>
   <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="bikes">
