--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
