--- a/insurance.html
+++ b/insurance.html
@@ -8,6 +8,7 @@
   <title>Seguros | Bikcraft</title>
   <link rel="preload" href="./src/css/style.css" as="style" />
   <link rel="stylesheet" href="./src/css/style.css" />
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="insurance">
