--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,7 @@
   <title>Termos e Condições | Bikcraft</title>
   <link rel="preload" href="./src/css/style.css" as="style">
   <link rel="stylesheet" href="./src/css/style.css">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="terms">
